--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/Mitchell/eclipse-workspace/CSCI-3850-P3/lib/gs-core-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Mitchell/eclipse-workspace/CSCI-3850-P3/lib/gs-core-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/gs-core-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/gs-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
